--- a/src/cascadia/TerminalApp/App.xaml
+++ b/src/cascadia/TerminalApp/App.xaml
@@ -42,6 +42,7 @@ the MIT License. See LICENSE in the project root for license information. -->
                         <!-- the value `AccentButtonStyle` is taken straight
                         from the ContentDialog source -->
                         <Setter Target="CloseButtonStyle" Value="{StaticResource AccentButtonStyle}" />
+                        <Setter Target="PrimaryButtonStyle" Value="{StaticResource ButtonRevealStyle}" />
                     </Style>
 
                     <!-- We need to manually create the error text brush as a
