fix UIA tree nav for tab row + TSF

--- a/src/cascadia/TerminalControl/TSFInputControl.xaml
+++ b/src/cascadia/TerminalControl/TSFInputControl.xaml
@@ -8,9 +8,11 @@
     d:DesignHeight="768"
     d:DesignWidth="1024">
 
-    <Canvas x:Name="Canvas" Visibility="Collapsed">
+    <Canvas x:Name="Canvas"
+            Visibility="Collapsed">
         <TextBlock x:Name="TextBlock"
                    IsTextSelectionEnabled="false"
-                   TextDecorations="Underline" />
+                   TextDecorations="Underline"
+                   AutomationProperties.AccessibilityView="Raw"/>
     </Canvas>
 </UserControl>
