--- a/src/cascadia/TerminalApp/TabRowControl.xaml
+++ b/src/cascadia/TerminalApp/TabRowControl.xaml
@@ -17,11 +17,13 @@ the MIT License. See LICENSE in the project root for license information. -->
                  TabWidthMode="Equal"
                  CanReorderTabs="True"
                  CanDragTabs="True"
-                 AllowDropTabs="True">
+                 AllowDropTabs="True"
+                 AutomationProperties.AccessibilityView="Raw">
 
         <mux:TabView.TabStripFooter>
             <mux:SplitButton
                 x:Name="NewTabButton"
+                x:Uid="NewTabSplitButton"
                 Click="OnNewTabButtonClick"
                 VerticalAlignment="Stretch"
                 HorizontalAlignment="Left"
@@ -29,7 +31,8 @@ the MIT License. See LICENSE in the project root for license information. -->
                 UseLayoutRounding="true"
                 FontFamily="Segoe MDL2 Assets"
                 FontWeight="SemiLight"
-                FontSize="12">
+                FontSize="12"
+                AutomationProperties.AccessibilityView="Control">
                 <!-- U+E710 is the fancy plus icon. -->
                 <mux:SplitButton.Resources>
 		    <!-- Override the SplitButton* resources to match the tab view's button's styles. -->
