clear input buffer on enter or escape

--- a/src/cascadia/TerminalControl/TSFInputControl.xaml
+++ b/src/cascadia/TerminalControl/TSFInputControl.xaml
@@ -6,8 +6,7 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="768"
-    d:DesignWidth="1024"
-    KeyDown="_KeyDownHandler">
+    d:DesignWidth="1024">
 
     <Canvas x:Name="Canvas" Visibility="Collapsed">
         <TextBlock x:Name="TextBlock"
