remove TabView changes that don't actually work

--- a/src/cascadia/TerminalControl/TSFInputControl.xaml
+++ b/src/cascadia/TerminalControl/TSFInputControl.xaml
@@ -12,7 +12,6 @@
             Visibility="Collapsed">
         <TextBlock x:Name="TextBlock"
                    IsTextSelectionEnabled="false"
-                   TextDecorations="Underline"
-                   AutomationProperties.AccessibilityView="Raw"/>
+                   TextDecorations="Underline"/>
     </Canvas>
 </UserControl>
