--- a/src/cascadia/TerminalApp/TabRowControl.xaml
+++ b/src/cascadia/TerminalApp/TabRowControl.xaml
@@ -17,8 +17,7 @@ the MIT License. See LICENSE in the project root for license information. -->
                  TabWidthMode="Equal"
                  CanReorderTabs="True"
                  CanDragTabs="True"
-                 AllowDropTabs="True"
-                 AutomationProperties.AccessibilityView="Raw">
+                 AllowDropTabs="True">
 
         <mux:TabView.TabStripFooter>
             <mux:SplitButton
