--- a/src/cascadia/TerminalApp/MinMaxCloseControl.xaml
+++ b/src/cascadia/TerminalApp/MinMaxCloseControl.xaml
@@ -131,8 +131,11 @@ the MIT License. See LICENSE in the project root for license information. -->
         </ResourceDictionary>
     </StackPanel.Resources>
 
-    <Button Height="36.0" MinWidth="46.0" Width="46.0" x:Name="MinimizeButton" Style="{StaticResource CaptionButton}" Click="_MinimizeClick"
-            AutomationProperties.Name="Minimize"
+    <Button Height="36.0" MinWidth="46.0" Width="46.0"
+            x:Name="MinimizeButton"
+            x:Uid="WindowMinimizeButton"
+            Style="{StaticResource CaptionButton}"
+            Click="_MinimizeClick"
             AutomationProperties.AccessibilityView="Raw">
         <Button.Resources>
             <ResourceDictionary>
@@ -140,8 +143,11 @@ the MIT License. See LICENSE in the project root for license information. -->
             </ResourceDictionary>
         </Button.Resources>
     </Button>
-    <Button Height="36.0" MinWidth="46.0" Width="46.0" x:Name="MaximizeButton" Style="{StaticResource CaptionButton}" Click="_MaximizeClick"
-            AutomationProperties.Name="Maximize"
+    <Button Height="36.0" MinWidth="46.0" Width="46.0"
+            x:Name="MaximizeButton"
+            x:Uid="WindowMaximizeButton"
+            Style="{StaticResource CaptionButton}"
+            Click="_MaximizeClick"
             AutomationProperties.AccessibilityView="Raw">
         <Button.Resources>
             <ResourceDictionary>
@@ -150,8 +156,11 @@ the MIT License. See LICENSE in the project root for license information. -->
             </ResourceDictionary>
         </Button.Resources>
     </Button>
-    <Button Height="36.0" MinWidth="46.0" Width="46.0" x:Name="CloseButton" Style="{StaticResource CaptionButton}" Click="_CloseClick"
-            AutomationProperties.Name="Close"
+    <Button Height="36.0" MinWidth="46.0" Width="46.0"
+            x:Name="CloseButton"
+            x:Uid="WindowCloseButton"
+            Style="{StaticResource CaptionButton}"
+            Click="_CloseClick"
             AutomationProperties.AccessibilityView="Raw">
         <Button.Resources>
             <ResourceDictionary>
