HAX: appstate, remember this setting

--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -52,6 +52,7 @@ the MIT License. See LICENSE in the project root for license information. -->
             x:Uid="CloseAllDialog"
             DefaultButton="Primary"
             PrimaryButtonClick="_CloseWarningPrimaryButtonOnClick">
-        </ContentDialog>
+	    <CheckBox x:Name="ShowCloseAllTabsCheck" x:Uid="CloseAllDialog_ShowCloseAllTabsCheck" />
+	</ContentDialog>
     </Grid>
 </Page>
