--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -53,5 +53,13 @@ the MIT License. See LICENSE in the project root for license information. -->
             DefaultButton="Primary"
             PrimaryButtonClick="_CloseWarningPrimaryButtonOnClick">
         </ContentDialog>
+        
+        <ContentDialog
+            x:Load="False"
+            x:Name="CloseTabDialog"
+            x:Uid="CloseTabDialog"
+            DefaultButton="Primary"
+            PrimaryButtonClick="_CloseTabWarningPrimaryButtonOnClick">
+        </ContentDialog>
     </Grid>
 </Page>
