--- a/src/cascadia/TerminalApp/TabRowControl.xaml
+++ b/src/cascadia/TerminalApp/TabRowControl.xaml
@@ -1,6 +1,6 @@
 <!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under
 the MIT License. See LICENSE in the project root for license information. -->
-<ContentPresenter
+<Grid
     x:Class="TerminalApp.TabRowControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -10,6 +10,49 @@ the MIT License. See LICENSE in the project root for license information. -->
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
+
+<!--     <ContentPresenter.Resources>
+        <ResourceDictionary>
+            <Style x:Key="MyTabView" TargetType="mux:TabView">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="mux:TabView">
+                            <VisualStateManager.VisualStateGroups>
+                                <VisualStateGroup x:Name="MinMax_States">
+                                    <VisualState x:Name="WindowState_Normal">
+                                        <VisualState.Setters>
+                                            <Setter Target="Padding" Value="14" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                    <VisualState x:Name="WindowState_Maximized">
+                                        <VisualState.Setters>
+                                            <Setter Target="Padding" Value="0" />
+                                        </VisualState.Setters>
+                                    </VisualState>
+                                </VisualStateGroup>
+                            </VisualStateManager.VisualStateGroups>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+        </ResourceDictionary>
+    </ContentPresenter.Resources> -->
+
+    <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="MinMax_States">
+                <VisualState x:Name="WindowState_Normal">
+                    <VisualState.Setters>
+                        <Setter Target="TabView.Padding" Value="14" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="WindowState_Maximized">
+                    <VisualState.Setters>
+                        <Setter Target="TabView.Padding" Value="0" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
+
     <mux:TabView x:Name="TabView"
                  VerticalAlignment="Bottom"
                  HorizontalContentAlignment="Stretch"
@@ -18,6 +61,21 @@ the MIT License. See LICENSE in the project root for license information. -->
                  CanReorderTabs="True"
                  CanDragTabs="True"
                  AllowDropTabs="True">
+
+        <!-- <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup x:Name="MinMax_States">
+                <VisualState x:Name="WindowState_Normal">
+                    <VisualState.Setters>
+                        <Setter Target="Padding" Value="14" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="WindowState_Maximized">
+                    <VisualState.Setters>
+                        <Setter Target="Padding" Value="0" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups> -->
 
         <mux:TabView.TabStripFooter>
             <mux:SplitButton
@@ -69,4 +127,4 @@ the MIT License. See LICENSE in the project root for license information. -->
 
     </mux:TabView>
 
-</ContentPresenter>
+</Grid>
