--- a/src/cascadia/TerminalApp/TabRowControl.xaml
+++ b/src/cascadia/TerminalApp/TabRowControl.xaml
@@ -1,6 +1,6 @@
 <!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under
 the MIT License. See LICENSE in the project root for license information. -->
-<Grid
+<ContentPresenter
     x:Class="TerminalApp.TabRowControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,9 +11,9 @@ the MIT License. See LICENSE in the project root for license information. -->
     mc:Ignorable="d">
 
 
-<!--     <ContentPresenter.Resources>
+    <ContentPresenter.Resources>
         <ResourceDictionary>
-            <Style x:Key="MyTabView" TargetType="mux:TabView">
+            <Style x:Key="MyTabView" TargetType="mux:TabView" BasedOn="{StaticResource DefaultTabViewStyle}">
                 <Setter Property="Template">
                     <Setter.Value>
                         <ControlTemplate TargetType="mux:TabView">
@@ -36,9 +36,10 @@ the MIT License. See LICENSE in the project root for license information. -->
                 </Setter>
             </Style>
         </ResourceDictionary>
-    </ContentPresenter.Resources> -->
+    </ContentPresenter.Resources>
 
-    <VisualStateManager.VisualStateGroups>
+
+<!--     <VisualStateManager.VisualStateGroups>
             <VisualStateGroup x:Name="MinMax_States">
                 <VisualState x:Name="WindowState_Normal">
                     <VisualState.Setters>
@@ -51,9 +52,10 @@ the MIT License. See LICENSE in the project root for license information. -->
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
-        </VisualStateManager.VisualStateGroups>
+        </VisualStateManager.VisualStateGroups> -->
 
     <mux:TabView x:Name="TabView"
+                 Style="{StaticResource MyTabView}"
                  VerticalAlignment="Bottom"
                  HorizontalContentAlignment="Stretch"
                  IsAddTabButtonVisible="false"
@@ -127,4 +129,4 @@ the MIT License. See LICENSE in the project root for license information. -->
 
     </mux:TabView>
 
-</Grid>
+</ContentPresenter>
