--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -38,8 +38,8 @@ the MIT License. See LICENSE in the project root for license information. -->
 
         <TextBox
             Grid.Row="0"
+            x:Uid="CommandPalette_SearchBox"
             x:Name="_SearchBox"
-            PlaceholderText="Type a command name"
             Text="">
 
         </TextBox>
