--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -100,7 +100,7 @@ the MIT License. See LICENSE in the project root for license information. -->
                                        FontSize="12"
                                        HorizontalAlignment="Right"
                                        VerticalAlignment="Center"
-                                       Text="ctrl+shift+1" />
+                                       Text="{x:Bind KeyChordText, Mode=OneWay}" />
                         </Grid>
                     </ListViewItem>
                 </DataTemplate>
