--- a/src/cascadia/TerminalApp/ColorPickupFlyout.xaml
+++ b/src/cascadia/TerminalApp/ColorPickupFlyout.xaml
@@ -24,82 +24,82 @@
                         <Setter Property="Margin" Value="2"/>
                     </Style>
                 </VariableSizedWrapGrid.Resources>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="Crimson">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="Crimson" ToolTipService.ToolTip="Crimson">
                     <Button.Content>
                         <Rectangle Fill="Crimson"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="SteelBlue">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="SteelBlue" ToolTipService.ToolTip="Steel Blue">
                     <Button.Content>
                         <Rectangle Fill="SteelBlue"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="MediumSeaGreen">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="MediumSeaGreen" ToolTipService.ToolTip="Medium Sea Green">
                     <Button.Content>
                         <Rectangle Fill="MediumSeaGreen"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="DarkOrange">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="DarkOrange" ToolTipService.ToolTip="Dark Orange">
                     <Button.Content>
                         <Rectangle Fill="DarkOrange"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="MediumVioletRed">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="MediumVioletRed" ToolTipService.ToolTip="Medium Violet Red">
                     <Button.Content>
                         <Rectangle Fill="MediumVioletRed"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="DodgerBlue">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="DodgerBlue" ToolTipService.ToolTip="Dodger Blue">
                     <Button.Content>
                         <Rectangle Fill="DodgerBlue"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="LimeGreen">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="LimeGreen" ToolTipService.ToolTip="Lime Green">
                     <Button.Content>
                         <Rectangle Fill="LimeGreen"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="Yellow">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="Yellow" ToolTipService.ToolTip="Yellow">
                     <Button.Content>
                         <Rectangle Fill="Yellow"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="BlueViolet">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="BlueViolet" ToolTipService.ToolTip="Blue Violet">
                     <Button.Content>
                         <Rectangle Fill="BlueViolet"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="SlateBlue">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="SlateBlue" ToolTipService.ToolTip="Slate Blue">
                     <Button.Content>
                         <Rectangle Fill="SlateBlue"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="Lime">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="Lime" ToolTipService.ToolTip="Lime">
                     <Button.Content>
                         <Rectangle Fill="Lime"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="Tan">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="Tan" ToolTipService.ToolTip="Tan">
                     <Button.Content>
                         <Rectangle Fill="Tan"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="Magenta">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="Magenta" ToolTipService.ToolTip="Magenta">
                     <Button.Content>
                         <Rectangle Fill="Magenta"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="Cyan">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="Cyan" ToolTipService.ToolTip="Cyan">
                     <Button.Content>
                         <Rectangle Fill="Cyan"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="SkyBlue">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="SkyBlue" ToolTipService.ToolTip="Sky Blue">
                     <Button.Content>
                         <Rectangle Fill="SkyBlue"/>
                     </Button.Content>
                 </Button>
-                <Button Click="ColorButton_Click" AutomationProperties.Name="DarkGray">
+                <Button Click="ColorButton_Click" AutomationProperties.Name="DarkGray" ToolTipService.ToolTip="Dark Gray">
                     <Button.Content>
                         <Rectangle Fill="DarkGray"/>
                     </Button.Content>
