Use the IAsyncOperation returned by ShowDialog

--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -58,18 +58,14 @@ the MIT License. See LICENSE in the project root for license information. -->
             x:Load="False"
             x:Name="MultiLinePasteDialog"
             x:Uid="MultiLinePasteDialog"
-            DefaultButton="Primary"
-            PrimaryButtonClick="_AcceptPasteButtonOnClick"
-            CloseButtonClick="_RejectPasteButtonOnClick">
+            DefaultButton="Primary">
         </ContentDialog>
 
         <ContentDialog
             x:Load="False"
             x:Name="LargePasteDialog"
             x:Uid="LargePasteDialog"
-            DefaultButton="Primary"
-            PrimaryButtonClick="_AcceptPasteButtonOnClick"
-            CloseButtonClick="_RejectPasteButtonOnClick">
+            DefaultButton="Primary">
         </ContentDialog>
     </Grid>
 </Page>
