--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -9,6 +9,7 @@ the MIT License. See LICENSE in the project root for license information. -->
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Windows10version1903="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 8)"
+    PointerPressed="_rootPointerPressed"
     mc:Ignorable="d">
 
     <Grid.Resources>
@@ -73,21 +74,31 @@ the MIT License. See LICENSE in the project root for license information. -->
     </Grid.Resources>
 
     <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="*" />
-        <ColumnDefinition Width="8*" />
-        <ColumnDefinition Width="*" />
+        <ColumnDefinition Width="2*" />
+        <ColumnDefinition Width="6*" />
+        <ColumnDefinition Width="2*" />
     </Grid.ColumnDefinitions>
 
     <Grid.RowDefinitions>
-        <RowDefinition Height="9*"/>
-        <RowDefinition Height="*"/>
+        <RowDefinition Height="8*"/>
+        <RowDefinition Height="2*"/>
     </Grid.RowDefinitions>
+
+    <!-- Setting the row/col span of this shadow backdrop is a bi of a hack. In
+    order to receive pointer events, an element needs to be _not_ transparent.
+    However, we want to be able to eat all the clicks outside the immediate
+    bounds of the command palette, and we don't want a semi-transparent overlay
+    over all of the UI. Fortunately, if we make this ShadowBackdrop the size of
+    the entire page, then it can be mostly transparent, and cause the root grid
+    to recieve clicks _anywhere_ in its bounds. -->
 
     <Grid
         x:Name="ShadowBackdrop"
         Background="Transparent"
-        Grid.Column="1"
+        Grid.Column="0"
         Grid.Row="0"
+        Grid.ColumnSpan="3"
+        Grid.RowSpan="2"
         HorizontalAlignment="Stretch"
         VerticalAlignment="Stretch">
         </Grid>
@@ -96,14 +107,13 @@ the MIT License. See LICENSE in the project root for license information. -->
         x:Name="Backdrop"
         Style="{ThemeResource CommandPaletteBackground}"
         CornerRadius="{ThemeResource ControlCornerRadius}"
+        PointerPressed="_backdropPointerPressed"
         Margin="8"
         Grid.Column="1"
         Grid.Row="0"
-        MaxWidth="400"
-        MaxHeight="400"
         Windows10version1903:Shadow="{StaticResource CommandPaletteShadow}"
         HorizontalAlignment="Stretch"
-        VerticalAlignment="Stretch">
+        VerticalAlignment="Top">
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
