--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -58,6 +58,6 @@ the MIT License. See LICENSE in the project root for license information. -->
             x:Name="CommandPalette"
             Grid.Row="1"
             Visibility="Collapsed"
-            VerticalAlignment="Top" />
+            VerticalAlignment="Stretch" />
     </Grid>
 </Page>
